--- a/api-dotnet7/appsettings.Development.json
+++ b/api-dotnet7/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection":"Data source=datingapp.db"
-  }
+  },
+  "TokenKey":"super secret ultra ultimate mega omega delta unguessable jwt token key"
 }
