--- a/client-solidjs/package.json
+++ b/client-solidjs/package.json
@@ -16,6 +16,7 @@
     "zod": "^3.22.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.4",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
